# pepperjavis-agent

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  INFRASTRUCTURE_OPTIMIZATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_SECRETS.md  SECRETS_MANAGEMENT_GUIDE.md  SKS_DEPLOYMENT_GUIDE.md  docker-compose.yml  k8s-databases.yaml  k8s-deployment.yaml  k8s-external-secrets-operator.yaml  k8s-network-policies.yaml  k8s-observability.yaml  k8s-resource-quotas.yaml  k8s-secrets-vault.yaml  k8s-storage.yaml  k8s-velero.yaml  main.py  pyproject.toml  requirements-docker.txt  requirements.txt  sks-deployment.sh
monitoring/: prometheus.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
pepperjavis/: __init__.py  agent.py  config.py  server.py  tools.py
scripts/: postgres-init.sql
