[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pepperjavis-agent"
version = "0.1.0"
description = "Pepper Potts AI Chief of Staff & JARVIS Agent powered by Strands Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "strands-agents>=0.2.0",
    "strands-agents-tools>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
]

providers = [
    "anthropic>=0.35.0",
    "openai>=1.30.0",
    "google-generativeai>=0.8.0",
]

full = [
    "pepperjavis-agent[dev,providers]",
    "caldav>=1.3.0",
    "aiosmtplib>=3.0.0",
    "sqlalchemy>=2.0.0",
    "mcp>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pepperjavis-agent"
Documentation = "https://github.com/yourUsername/pepperjavis-agent/wiki"
Repository = "https://github.com/yourUsername/pepperjavis-agent"
Issues = "https://github.com/yourUsername/pepperjavis-agent/issues"

[tool.setuptools]
packages = ["pepperjavis"]

[tool.setuptools.package-data]
pepperjavis = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
strict_optional = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short"

[tool.coverage.run]
source = ["pepperjavis"]
